_projects/kubernetes/prometheus/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-moratilla-com
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: prometheus.moratilla.com
      http:
        paths:
        - path: /
          backend:
            serviceName: prometheus-k8s
            servicePort: 9090
